--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1" />
-<title>PlantPlaces.com Virtual Arboretum</title>
-</head>
-<body>
-Welcome to PlantPlaces!
-</body>
+<html xmlns:th="http://www.thymeLeaf.org">
+	<head>
+		<meta charset="ISO-8859-1" />
+		<title>PlantPlaces.com Virtual Arboretum</title>
+	</head>
+	<body>
+		Welcome to PlantPlaces!
+		<br/>
+		Your specimen is:
+		<p th:text="${specimenDTO}"/>
+	</body>
 </html>
